searchfiled in monster rolodex

--- a/First/5.changes-NameChangingButton.md
+++ b/First/5.changes-NameChangingButton.md
@@ -136,9 +136,63 @@ and can render that by
 
  
         <p> Hi {this.state.name.firstName} {this.state.name.lasttName} </p>
-        
+
         <Button onclick = {() => {
             this.setState({name: {firstname : 'Sihar' , lastName : 'Ahamed'}})
+        }}> Change Name </Button>
+
+
+```
+
+---
+
+
+<br>
+look at the below code:
+
+```js
+  <p> Hi {this.state.name.firstName} {this.state.name.lasttName} </p>
+
+        <Button onclick = {() => {
+            this.setState({name: {firstname : 'Sihar' , lastName : 'Ahamed'}});
+            console.log(this.state);
+        }}> Change Name </Button>
+```
+
+  * in here when clicked the button the name will change but in the console it will show the previous state not the updated state. 
+  * 
+ 
+ because this functional happens asynchronously.So  react tries to optimise the components so it can perfoeme faster.
+
+ When this heppens some funtion may work or not 
+
+ if our fuction wanted to non asynchronously all we have to do is 
+
+```Js
+<Button onclick = {() => { this.setState(() => {
+            return {name: {firstname : 'Sihar' , lastName : 'Ahamed'}};},
+            () => {
+                console.log(this.state);}
+            ) 
+        
+        }}> Change Name </Button>
+
+
+```
+
+in here we have to use a callback function to get the updated state.
+
+like 
+
+```js
+
+<Button onclick = {() => { this.setState(() => {
+            //first Funtion
+            },
+            () => {
+                //Second Function
+                }
+            ) 
         }}> Change Name </Button>
 
 
